# umps

./: LICENSE.txt  README.md  meson.build  meson.options
src/: config.h.in  macros.h  main.c  meson.build  ui.h
src/ui/: base.c  debug.c  dock.c  menu.c  root.c  ui.internal.h  uimenu.internal.h
